--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emailjs/browser": "^3.5.0",
     "vee-validate": "^4.5.10",
     "vue": "^3.2.25",
     "vue-router": "^4.0.13"
